--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -5,13 +5,11 @@
   box-sizing: border-box;
   transition: 0.5;
 }
-
 body {
   height: 100vh;
   width: 100%;
   position: relative;
 }
-
 footer {
   width: 100%;
   bottom: 0;
@@ -23,19 +21,16 @@ footer {
   align-items: center;
   flex-direction: column;
 }
-
 footer > img {
   margin-top: 10px;
   margin-bottom: 10px;
   height: 100px;
   width: 100px;
 }
-
 .logo {
   height: 80px;
   margin-bottom: 1rem;
 }
-
 .social-icons-container,
 .footer-menu-container {
   display: flex;
@@ -44,49 +39,41 @@ footer > img {
   flex-wrap: wrap;
   margin-bottom: 1rem;
 }
-
 .social-icon {
   height: 50px;
   width: 50px;
   border-radius: 50px;
   border: 1px solid #f2f2f2;
-  background-image: url(./img/facebook.png);
+  background-image: url(../../assets/Footer/facebook.png);
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
   margin: 1rem;
 }
-
 .social-icon:hover {
   background-color: #7900be;
   filter: invert(1);
 }
-
 .social-icon:nth-of-type(2) {
-  background-image: url(./img/instagram.png);
+  background-image: url(../../assets/Footer/instagram.png);
 }
-
 .social-icon:nth-of-type(3) {
-  background-image: url(./img/whatsapp.png);
+  background-image: url(../../assets/Footer/whatsapp.png);
 }
-
 .footer-menu-container {
   list-style-type: none;
   color: #f2f2f2;
   font-size: 18px;
 }
-
 .menu-item {
   margin: 1rem 1.5rem;
   cursor: pointer;
   opacity: 0.6;
 }
-
 .menu-item:hover {
   opacity: 100%;
   color: #b3ff00;
 }
-
 .copyright {
   color: #f2f2f2;
   opacity: 0.3;
